# multi-gateway

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/bsp/: CMakeLists.txt  lilygo_eth.c
components/bsp/include/: lilygo_eth.h
components/ethernet_init/: Kconfig.projbuild  ethernet_init.c  ethernet_init.h
main/: CMakeLists.txt  gw_eth.c  main.cpp
main/include/: gw_eth.h
